Sign Up Function

--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -5,13 +5,13 @@ interface Props {
 ---
 
 <main>
-    <img src="/src/img/label.png" alt="autocom-label" class="label">
+    <img src="./src/img/label.png" alt="autocom-label" class="label">
 </main>
 
 <style>
     .label {
         display: flex;
-        max-width: 550px;
+        max-width: 20%;
         margin: 2rem;
     }
 </style>
