--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -7,6 +7,17 @@ import MainLayout from "@/layouts/MainLayout.astro";
     <div
       class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
     >
+      <a
+        href="#"
+        class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
+      >
+        <img
+          class="w-8 h-8 mr-2"
+          src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
+          alt="logo"
+        />
+        Flowbite
+      </a>
       <div
         class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
       >
@@ -14,12 +25,12 @@ import MainLayout from "@/layouts/MainLayout.astro";
           <h1
             class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
           >
-            Sign Up in to your account
+            Sign In in to your account
           </h1>
           <form
             class="space-y-4 md:space-y-6"
             method="POST"
-            action="/api/signup"
+            action="/api/signin"
           >
             <div>
               <label
@@ -57,8 +68,8 @@ import MainLayout from "@/layouts/MainLayout.astro";
               >Sign Up</button
             >
             <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-              already have an account? <a
-                href="/signin"
+              Don't have an account? <a
+                href="/signup"
                 class="font-medium text-primary-600 hover:underline dark:text-primary-500"
                 >Sign In</a
               >
