--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,45 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Label from '../components/Label.astro'
+const user = Astro.locals.user;
+import Layout from "../layouts/Layout.astro";
+import Label from "../components/Label.astro";
 ---
 
-<Layout title="Autocom">
-	<Label/>
-</Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Index</title>
+  </head>
+  <body class="min-h-screen grid place-items-center">
+    {
+      user ? (
+        <div class="flex flex-col gap-2">
+          <form method="POST" action="/api/signout">
+            <button class="underline">Sign out</button>
+          </form>
+          <a class="underline" href="/seller">
+            {" "}
+            Go to the admin page
+          </a>
+        </div>
+      ) : (
+        <>
+          <Layout title="Autocom">
+            <Label />
+          </Layout>
+          <div class="flex flex-col gap-2">
+            <a class="underline" href="/signin">
+              Sign In With Username/Password
+            </a>
+          </div>
+        </>
+      )
+    }
+  </body>
+</html>
+
 
 <style>
 	html{
@@ -23,4 +57,8 @@ import Label from '../components/Label.astro'
 		font-size: 20px;
 		line-height: 1.6;
 	}
+
+  .underline {
+    color: azure;
+  }
 </style>
