--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -11,7 +11,7 @@ interface Props {
 <style>
     .label {
         display: flex;
-        max-width: 20%;
+        min-width: 20%;
         margin: 2rem;
     }
 </style>
