--- a/src/components/Label.astro
+++ b/src/components/Label.astro
@@ -11,7 +11,7 @@ interface Props {
 <style>
     .label {
         display: flex;
-        min-width: 20%;
-        margin: 2rem;
+        width: 25%;
+        margin: 1rem;
     }
 </style>
