--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,38 +29,67 @@ import Label from "../components/Label.astro";
           <Layout title="Autocom">
             <Label />
           </Layout>
-          <h3>
-            
-          </h3>
-          <div class="flex flex-col gap-2">
-            <a class="underline" href="/signin">
-              Sign In With Username/Password
-            </a>
-          </div>
+          <h3 class="title">Explora nuestro catalogo de autos.</h3>
+          <h4 class="description">
+            Reserva y consulta los detalles de los autos que tenemos para ti.
+          </h4>
         </main>
       )
     }
   </body>
+  <footer class="sign">
+      <a href="/signin">
+        Sign In
+      </a>
+  </footer>
 </html>
 
-
 <style>
-	html{
-		background-image: url("../img/cover.jpg");
-		background-repeat: no-repeat;
-		background-size: 100%;
-	}
+  html {
+    background-image: url("../img/cover.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
+  }
 
-	main {
-		margin: auto;
-		padding: 1rem;
-		max-width: calc(100% - 2rem);
-		color: rgb(5, 0, 0);
-		font-size: 20px;
-		line-height: 1.6;
-	}
+  main {
+    margin: auto;
+    padding: 1rem;
+    max-width: calc(100% - 2rem);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    line-height: 1.6;
+  }
+
+  footer {
+    position: absolute;
+    top: 85%;
+    left: 80%;
+  }
 
   .underline {
     color: azure;
+  }
+
+  .sign {
+    display: flex;
+    align-items: flex-end;
+    color: white;
+    padding: 1rem;
+    margin: auto;
+    font-weight: bold;
+  }
+
+  .title {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 5rem;
+    padding: 1rem;
+  }
+
+  .description{
+    padding: 1rem;
   }
 </style>
