--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,9 +37,12 @@ import Label from "../components/Label.astro";
       )
     }
   </body>
-  <footer class="sign">
-      <a href="/signin">
+  <footer>
+      <a href="/signin"  class="sign">
         Sign In
+      </a>
+      <a href="/catalogue" class="access">
+        Acceder al Catálogo
       </a>
   </footer>
 </html>
@@ -65,7 +68,6 @@ import Label from "../components/Label.astro";
   footer {
     position: absolute;
     top: 85%;
-    left: 80%;
   }
 
   .underline {
@@ -74,6 +76,17 @@ import Label from "../components/Label.astro";
 
   .sign {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    padding: 1rem;
+    margin: auto;
+    font-weight: bold;
+  }
+
+  .access {
+    display: flex;
+    flex-direction: column;
     align-items: flex-end;
     color: white;
     padding: 1rem;
